# liteparse-grpc

./: .gitignore  Dockerfile  README.md
.github/workflows/: docker-ci.yml  docker-publish.yml
crates/grpc/: Cargo.toml  build.rs
crates/grpc/src/: client.rs  server.rs
crates/grpc/src/definitions/: parser.rs
crates/observability/: Cargo.toml
crates/observability/src/: lib.rs
