[package]
name = "grpc"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "*"
prost = "0.14"
tonic-prost = "*"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
liteparse = "2"
tracing = "0.1.44"
observability = { path = "../observability" }
clap = { version = "4.6.1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tonic-prost-build = "*"

[[bin]]
name = "liteparse-server"
path = "src/server.rs"

[[bin]]
name = "liteparse-client"
path = "src/client.rs"
