[package]
name = "observability"
version = "0.1.0"
edition = "2024"

[dependencies]
# uncomment for opentelemtry
# opentelemetry = "0.31.0"
# opentelemetry-otlp = { version = "0.31.1", features = ["grpc-tonic"] }
# opentelemetry-semantic-conventions = { version = "0.31.0", features = ["semconv_experimental"] }
# opentelemetry_sdk = "0.31.0"
# tracing-opentelemetry = "0.32.1"
tracing-core = "0.1.36"
tracing-subscriber = "0.3.23"
